finally fixed horizontal scrolling and layout mistakes; thinning settings bar (still some more todo)

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,9 @@
-.wrapper = {
-    width: 100%;
+body {
+    margin: 100;
+    background-color: black;
 }
+
+
 .sidebar = {
 
     top: 5vh;
